adjusted ex5 answers

--- a/exercises/5_distributions/5_distributions_exercises.Rmd
+++ b/exercises/5_distributions/5_distributions_exercises.Rmd
@@ -14,7 +14,7 @@ Here are the packages you need.
 ```{r}
 # Install these if needed
 library("tidyverse")
-#library("scRNAseq")
+library("beeswarm")
 library("ggridges")
 library("ggforce")
 library("ggrain")
